--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/Offers.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/Offers.css
@@ -5,7 +5,7 @@
     margin: auto;
     padding: 0px 140px;
     margin-bottom: 150px;
-    background: linear-gradient(180deg, #ffffff 30%,#76dbfc 30%);;
+    background: linear-gradient(180deg, #76dbfc 80%,#454545 30%);;
 }
 .offers-left{
     flex: 1;
