--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/App.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: auto;
+  min-height: 100vh;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .App-logo {
@@ -77,3 +80,8 @@ h4{
 p{
   text-align:left;
 } */
+
+body {
+  padding: 0;
+  margin: 0;
+}
