--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/Navbar.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/Navbar.css
@@ -1,8 +1,10 @@
 .navbar{
+    width: 100%;
+    height: 100px;
+    background-color: rgb(90, 194, 255);
     display: flex;
-    justify-content: space-around;
-    padding: 15px 0px;
-    box-shadow: 0 1px 3px -2px black;
+    justify-content: flex-end;
+    align-items: center;
 }
 .nav-logo{
     display: flex;
@@ -10,7 +12,7 @@
     gap: 10px;
 }
 .nav-logo p{
-    color: #00c3ff;
+    color: #444444;
     font-size: 38px;
     font-weight: 600;
 }
@@ -37,7 +39,7 @@
     width: 100%;
     height: 8px;
     border-radius: 10px;
-    background: #00c3ff;
+    background: #ffffff;
 }
 .nav-login-cart{
     display: flex;
@@ -73,3 +75,17 @@
     background: rgb(123, 255, 251);
     color: white;
 }
+
+.links {
+    margin-right: 50px;
+    display: flex;
+    align-items: center;
+  }
+  
+  .links a {
+    text-decoration: none;
+    color: white;
+    margin-left: 20px;
+    font-size: 25px;
+  }
+  
