--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/App.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/App.css
@@ -1,8 +1,5 @@
 .App {
-  width: 100%;
-  height: auto;
-  min-height: 100vh;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
 }
 
 .App-logo {
@@ -80,8 +77,3 @@ h4{
 p{
   text-align:left;
 } */
-
-body {
-  padding: 0;
-  margin: 0;
-}
