--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/NewsLetter.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/NewsLetter.css
@@ -1,26 +1,26 @@
 .newsletter{
     width: 65%;
-    height: 40vh;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
-    padding: 0px 140px;
-    margin-bottom: 150px;
+    padding: 0px 20px;
+    margin-bottom: 50px;
     background: linear-gradient(180deg, #444444 0%, #77d6ff 80%);
-    gap: 30px;
+    gap: 10px;
 }
 
 .newsletter h1{
     color: #ffffff;
-    font-size: 55px;
+    font-size: 20px;
     font-weight: 600;
 }
 
 .newsletter p{
-    color: #454545;
-    font-size: 20px;
+    color: #2b2b2b;
+    font-size: 15px;
 }
 
 .newsletter div{
@@ -28,25 +28,25 @@
     align-items: center;
     justify-content: space-between;
     background: white;
-    width: 730px;
-    height: 70px;
+    width: 700px;
+    height: 22px;
     border-radius: 80px;
     border: 1px solid #e3e3e3;
 }
 
 .newsletter input{
-    width: 500px;
-    margin-left: 30px;
+    width: 800px;
+    margin-left: 10px;
     border: none;
     outline: none;
     color: #616161;
     font-family: Poppins;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .newsletter div button{
     width: 210px;
-    height: 70px;
+    height: 30px;
     border-radius: 80px;
     background: black;
     color: white;
