--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/HeroSection.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/HeroSection.css
@@ -8,56 +8,61 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 40px;
-    padding-left: 200px;
+    gap: 5vh;
+    padding-left: 10vw;
     line-height: 1.1;
     justify-content:space-between;
 }
 .heroSection-left h2{
     color: #000000;
-    font-size: 40px;
+    font-size: 6vh;
     font-weight: 600;
 }
 
 .heroSection-left p{
     color: #00cdfa;
-    font-size: 20px;   
+    font-size: 3vh;   
     font-weight: 700;
 }
 
 .heroSection-left h3{
     color: #515960;
-    font-size: 18px;   
+    font-size: 2vh;     
     font-weight: 700;
 }
 
 .heroSection-left u{
     text-decoration: underline #19e0ff;
     font-weight: bold;
-    font-size: 20px; 
+    font-size: 3vh; 
   }
 
 .heroSection-hand-icon{
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 1vh;
 }
 .heroSection-hand-icon img{
-    width: 105px;
+    width: 5vh;
 }
 .heroSection-latest-btn{
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 8px;
-    width: 250px;
-    height: 40px;
-    border-radius: 75px;
-    margin-top: 20px;
+    gap: 1vh;
+    width: 20vw;
+    height: 10vh;
+    border-radius: 10vh;
+    margin-top: 2vh;
     background: #3ef3fd;
     color: rgb(40, 57, 74);
-    font-size: 15px;
+    font-size: 1vw;
     font-weight: 500;
+}
+
+.heroSection-img {
+    max-height: 80%;
+    width: auto;
 }
 
 .heroSection-right{
@@ -72,6 +77,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 3px;
+    gap: 3vh;
     cursor: pointer;
 }
