--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/NewCourse.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/NewCourse.css
@@ -2,23 +2,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
-   margin-bottom: 20px;
+    gap: 1vh;
+    margin-top: 80px;
 }
+
 .new-course h1{
     color: #353535;
-    font-size: 40px;
+    font-size: 6vh;
     font-weight: 600;
 }
 .new-course hr {
-    width: 400px;
+    /* width: 400px;
     height: 6px;
     border-radius: 10px;
+    background: #00b3ff; */
+    width: 30vw;
+    height: 5px;
+    border-radius: 5px;
     background: #00b3ff;
   }
 .courses{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-top: 20px;
-    gap: 20px;
+    margin-top: 1px;
+    gap: 10px;
 }
+
+
