--- a/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/NewsLetter.css
+++ b/MiUdemy_FinalVersion/MiUdemy_Web App/src/UIComponents/NewsLetter.css
@@ -1,16 +1,18 @@
 .newsletter{
-    width: 65%;
+    width: 85%;
     height: 20vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin: auto;
-    padding: 0px 20px;
-    margin-bottom: 50px;
+    padding:10px 20px;
+    margin-top: 40px;
+    margin-bottom: 10px;
     background: linear-gradient(180deg, #444444 0%, #77d6ff 80%);
-    gap: 10px;
+    gap: 1vh;
 }
+
 
 .newsletter h1{
     color: #ffffff;
